# did-cik-performance-climate-event

./: .gitignore  README.md  research-proposal.md
analysis/event_study/: 00_baseline_regressions.ipynb
analysis/event_study/diff_in_diff_package/py_did_multiplegt_dyn/: LICENSE  LICENSE.txt  README.md  pyproject.toml  testing_package.ipynb
analysis/event_study/diff_in_diff_package/py_did_multiplegt_dyn/src/did_multiplegt_dyn/: __init__.py  _utils.py  did_multiplegt_dyn.py  did_multiplegt_dyn_core.py  did_multiplegt_main.py
analysis/event_study/r/: helpers.R
data/: df_industry.parquet  df_location.parquet  df_sheldus.parquet  example_treatment.parquet
data-preparation/: data_preparation.ipynb
data-preparation/climate_study/: __init__.py
data-preparation/climate_study/treatment/: __init__.py  sheldus_treatment_builder.py
data-preparation/climate_study/visualization/: __init__.py  financial_visualizer.py  location_visualizer.py
