[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_did_multiplegt_dyn"          # name on PyPI
version = "0.1.4"
description = "Estimation of event-study Difference-in-Difference (DID) estimators in designs with multiple groups and periods, and with a potentially non-binary treatment that may increase or decrease multiple times."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }          # or "BSD-3-Clause", etc.
authors = [
  { name = "Anzony Quispe", email = "anzony.quispe@gmail.com" },
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "polars>=1.3.0",
  "statsmodels>=0.12.5",
]

[project.urls]
Homepage = "https://github.com/anzonyquispe/py_did_multiplegt_dyn"
Issues = "https://github.com/anzonyquispe/py_did_multiplegt_dyn/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
